--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "^6.0.1",
+    "@expo/prebuild-config": "^6.0.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "expo": "~48.0.15",
+    "expo-modules-autolinking": "^1.2.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -19,8 +22,7 @@
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "expo-cli": "^5.0.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
