--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "@expo/config-plugins": "^6.0.1",
     "@expo/prebuild-config": "^6.0.1",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.15",
-    "expo-modules-autolinking": "^1.2.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
