--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AwesomeProject",
-    "slug": "AwesomeProject",
+    "name": "TimeBuddy（タイムバディ）",
+    "slug": "TimeBuddy（タイムバディ）",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
