--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config-plugins": "^6.0.1",
-    "@expo/prebuild-config": "^6.0.1",
+    "@expo/config-plugins": "~6.0.0",
+    "@expo/prebuild-config": "~6.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.71.7",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-appstate-listener": "^1.0.0",
     "react-native-web": "~0.18.11"
   },
