--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.7",
     "react-native-appstate-listener": "^1.0.0",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
